; ModuleID = '/home/carl/AnghaBench/vlc/src/network/extr_httpd.c_httpd_ClientTlsHandshake.c'
source_filename = "/home/carl/AnghaBench/vlc/src/network/extr_httpd.c_httpd_ClientTlsHandshake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32, i32 }

@HTTPD_CLIENT_DEAD = common dso_local global i32 0, align 4
@HTTPD_CLIENT_RECEIVING = common dso_local global i32 0, align 4
@HTTPD_CLIENT_TLS_HS_IN = common dso_local global i32 0, align 4
@HTTPD_CLIENT_TLS_HS_OUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, %struct.TYPE_6__*)* @httpd_ClientTlsHandshake to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @httpd_ClientTlsHandshake(%struct.TYPE_5__* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @vlc_tls_SessionHandshake(i32 %7, i32 %10)
  switch i32 %11, label %28 [
    i32 -1, label %12
    i32 0, label %16
    i32 1, label %20
    i32 2, label %24
  ]

12:                                               ; preds = %2
  %13 = load i32, i32* @HTTPD_CLIENT_DEAD, align 4
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  br label %28

16:                                               ; preds = %2
  %17 = load i32, i32* @HTTPD_CLIENT_RECEIVING, align 4
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  br label %28

20:                                               ; preds = %2
  %21 = load i32, i32* @HTTPD_CLIENT_TLS_HS_IN, align 4
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  br label %28

24:                                               ; preds = %2
  %25 = load i32, i32* @HTTPD_CLIENT_TLS_HS_OUT, align 4
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  br label %28

28:                                               ; preds = %2, %24, %20, %16, %12
  ret void
}

declare dso_local i32 @vlc_tls_SessionHandshake(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
